fixed bug with date string overflow on mobile

--- a/src/components/forecast-section.scss
+++ b/src/components/forecast-section.scss
@@ -30,3 +30,9 @@
     padding-top: 0.5em;
     white-space: pre-wrap;
 }
+
+@media (max-width: 560px){
+	.forecast-section h2.date-string{
+		font-size: 15px;
+	}
+}
